--- a/index.html
+++ b/index.html
@@ -8,30 +8,11 @@
     <!-- SEO 优化 -->
     <meta name="description" content="大绵羊博客的引导页面，分享各种有趣的内容和文章。">
     <meta name="keywords" content="大绵羊, 博客, 引导页面, 技术博客, 个人博客">
+    <!-- 引入Google字体 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap" rel="stylesheet">
     <style>
-        /* 字体 */
-        @font-face {
-            font-family: "Alimama";
-            src: url('./Alimama.woff2');
-        }
-
-        body {
-            font-family: "Alimama" !important;
-        }
-
-        b {
-            font-weight: 500;
-        }
-
-        div,
-        p,
-        a,
-        span,
-        h1 {
-            font-family: "Alimama" !important;
-        }
-
-
         /* 重置默认样式 */
         * {
             margin: 0;
