--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
         <img style="width: 10vw;" src="https://dmyblog.cn/logo-icon.svg">
         <h1>大绵羊博客</h1>
         <p>很荣幸您能访问我的网站！ </p>
+        <div>
+            <p style="color: #ff4d00;">广告: <span style="color: #525f7f;">如果您有想法购买7B2主题，可以联系站长返现购买哈</span></p>
+            <p style="color: #ff4d00;">广告: <span style="color: #525f7f;">接网站wordpress各种疑难杂症50解君愁</span></p>
+            <p style="color: #ff4d00;">站长QQ: <span style="color: #525f7f;">1992890443</span></p>
+        </div>
+        </br>
+
         <a href="https://dmyblog.cn/"><button>进入博客</button></a>
     </div>
 </body>
